unpackaged/main/default/objects/Case/fields/TEST__c.field-meta.xml
<CustomField>
    <fullName>TEST__c</fullName>
    <formula>IF(
AND(
 (TEXT(HUB_Handle__c) != &#39;&#39; || TEXT(HUB_Handle__c) != &#39;00&#39;),
 (TEXT(Hub_Origin__c) != &#39;&#39; || TEXT(Hub_Origin__c) != &#39;00&#39;)
 ),
true,
IF(
AND(
 (TEXT(HUB_Handle__c) = &#39;&#39; || TEXT(HUB_Handle__c) = &#39;00&#39;),
 (TEXT(Hub_Origin__c) != &#39;&#39; || TEXT(Hub_Origin__c) != &#39;00&#39;)
 ),
true,
IF(
AND(
 (TEXT(HUB_Handle__c) != &#39;&#39; || TEXT(HUB_Handle__c) != &#39;00&#39;),
 (TEXT(Hub_Origin__c) = &#39;&#39; || TEXT(Hub_Origin__c) = &#39;00&#39;)
 ),
true,
false)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEST</label>
    <type>Checkbox</type>
</CustomField>