unpackaged/main/default/objects/Case/fields/ToShareWithDUE__c.field-meta.xml
<CustomField>
    <fullName>ToShareWithDUE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>To Share with DUE</label>
    <type>Checkbox</type>
</CustomField>