unpackaged/main/default/objects/Case/fields/TransferStatus__c.field-meta.xml
<CustomField>
    <fullName>TransferStatus__c</fullName>
    <label>Transfer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transfer OK</fullName>
            </value>
            <value>
                <fullName>No transfer needed</fullName>
            </value>
            <value>
                <fullName>Transfer NA : answer provided to CSC</fullName>
            </value>
            <value>
                <fullName>Transfer failed : wrong number</fullName>
            </value>
            <value>
                <fullName>Transfer failed : sales advisor busy</fullName>
            </value>
            <value>
                <fullName>Transfer failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>