unpackaged/main/default/objects/Case/fields/VICCase__c.field-meta.xml
<CustomField>
    <fullName>VICCase__c</fullName>
    <description>Is this case related to a VIP customer</description>
    <formula>IF(Account.IsVic__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is this case related to a VIP customer</inlineHelpText>
    <label>VIC Case</label>
    <type>Checkbox</type>
</CustomField>