unpackaged/main/default/objects/Case/fields/WebCountry__c.field-meta.xml
<CustomField>
    <fullName>WebCountry__c</fullName>
    <label>Web Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>