unpackaged/main/default/objects/Case/validationRules/CannotCloseNotQualifiedCase.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotCloseNotQualifiedCase</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $Permission.ByPassVR = FALSE,
    ISPICKVAL( Status , &#39;Closed&#39;),
     OR(
           ISPICKVAL( Type, &#39;&#39; ),
          ISPICKVAL( SubType__c,&#39;&#39; ),
          ISPICKVAL( Contact_reason__c,&#39;&#39; )
         )

    
)</errorConditionFormula>
    <errorMessage>The Case cannot be closed without qualification</errorMessage>
</ValidationRule>