unpackaged/main/default/objects/Case/validationRules/Case_Language_Mandatory_for_phone.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Language_Mandatory_for_phone</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   $Permission.ByPassVR = FALSE,
    ISPICKVAL($User.Hub__c,&#39;EU&#39;),
    ISPICKVAL(Origin ,&#39;Phone&#39;),
    ISPICKVAL(CaseLanguage__c, &#39;&#39;) 
    )</errorConditionFormula>
    <errorDisplayField>CaseLanguage__c</errorDisplayField>
    <errorMessage>Case language for phone cases is mandatory</errorMessage>
</ValidationRule>