unpackaged/main/default/objects/Case/validationRules/Customer_feedback_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_feedback_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Permission.ByPassVR = FALSE,
NegativeFeedback__c = true, 
ISBLANK(CustomerFeedback__c)
)</errorConditionFormula>
    <errorDisplayField>CustomerFeedback__c</errorDisplayField>
    <errorMessage>You have selected &quot;Customer Unsatisfied&quot;, complete the field &quot;Customer Feedback&quot;.</errorMessage>
</ValidationRule>