unpackaged/main/default/objects/Case/validationRules/CustomerFeedback_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomerFeedback_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Permission.ByPassVR = FALSE,
PositiveFeedback__c = true, 
ISBLANK(CustomerFeedback__c)
)</errorConditionFormula>
    <errorDisplayField>CustomerFeedback__c</errorDisplayField>
    <errorMessage>You have selected &quot;Customer Satisfied&quot;, complete the field &quot;Customer Feedback&quot;.</errorMessage>
</ValidationRule>