unpackaged/main/default/objects/Case/validationRules/Hub_Mandatory_for_Closed_Cases.validationRule-meta.xml
<ValidationRule>
    <fullName>Hub_Mandatory_for_Closed_Cases</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
$Permission.ByPassVR = FALSE,
 ISPICKVAL( Status , &#39;Closed&#39;),
 ISPICKVAL(Hub_Origin__c , &#39;&#39;)
)</errorConditionFormula>
    <errorDisplayField>Hub_Origin__c</errorDisplayField>
    <errorMessage>Hub origin should be filled.</errorMessage>
</ValidationRule>