unpackaged/main/default/objects/Case/validationRules/OOB_or_Reservation_Origin_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>OOB_or_Reservation_Origin_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Permission.ByPassVR = FALSE,
NOT(ISPICKVAL(Hub_Origin__c,&#39;DEUKO1&#39;)),
ISPICKVAL(Contact_reason__c , &#39;Order on behalf converted&#39;),
ISPICKVAL(OOBorReservationOrigin__c, &#39;&#39;)
)</errorConditionFormula>
    <errorDisplayField>OOBorReservationOrigin__c</errorDisplayField>
    <errorMessage>You have selected a typology concerning an Order on Behalf. Please complete the &quot;OOB or Reservation Origin&quot; field.</errorMessage>
</ValidationRule>