unpackaged/main/default/objects/Case/validationRules/Order_Number_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Order_Number_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 $Permission.ByPassVR = FALSE,
 NOT(ISPICKVAL(Hub_Origin__c,&#39;DEUKO1&#39;)),
 OR((ISPICKVAL( SubType__c ,&#39;Order&#39;) &amp;&amp;  NOT( ISPICKVAL(Contact_reason__c  , &#39;Order on behalf information&#39;))),
     ISPICKVAL(SubType__c  , &#39;Delivery&#39;),
     ISPICKVAL(SubType__c, &#39;Exchange &amp; return&#39;) &amp;&amp; NOT( ISPICKVAL(Contact_reason__c  , &#39;Terms &amp; conditions&#39;))
    ),
  ISBLANK( OrderNumber__c ) 
     

)</errorConditionFormula>
    <errorDisplayField>OrderNumber__c</errorDisplayField>
    <errorMessage>You have selected a typology concerning an order. Please complete the &quot;Order number&quot; field.</errorMessage>
</ValidationRule>