unpackaged/main/default/objects/Case/validationRules/Product_Reference_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Reference_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Permission.ByPassVR = FALSE,
NOT(ISPICKVAL(Hub_Origin__c,&#39;DEUKO1&#39;)),
OR(ISPICKVAL(Contact_reason__c , &#39;Store reservation&#39;),ISPICKVAL(Contact_reason__c , &#39;Order on behalf converted&#39;)),
ISBLANK(Productreference__c)  
)</errorConditionFormula>
    <errorDisplayField>Productreference__c</errorDisplayField>
    <errorMessage>Please complete the &quot;Product reference&quot; field.</errorMessage>
</ValidationRule>