unpackaged/main/default/objects/Case/listViews/ADMIN_EU_Case.listView-meta.xml
<ListView>
    <fullName>ADMIN_EU_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>EU - ADMIN</label>
    <queue>EU_ADMIN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>