unpackaged/main/default/objects/Case/listViews/Agent_New_Email.listView-meta.xml
<ListView>
    <fullName>Agent_New_Email</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Channel__c</columns>
    <columns>SLAFlag__c</columns>
    <columns>Language__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.TYPE</columns>
    <columns>Hub_Origin__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CustomerEmail__c</columns>
    <columns>NAME</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New email</value>
    </filters>
    <label>Agent New Email</label>
</ListView>