unpackaged/main/default/objects/Case/listViews/All_Cases_Rimowa_DEUKO1.listView-meta.xml
<ListView>
    <fullName>All_Cases_Rimowa_DEUKO1</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>SLAFlag__c</columns>
    <columns>Hub_Origin__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Language__c</columns>
    <columns>Channel__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>SuppliedEmail__c</columns>
    <columns>CASES.EMAIL</columns>
    <columns>Phone__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Hub_Origin__c</field>
        <operation>equals</operation>
        <value>DEUKO1</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Cases Rimowa DEUKO1</label>
</ListView>