unpackaged/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>Case_ID_18__c</columns>
    <columns>CaseExternalID__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.REASON</columns>
    <columns>CONTACT.ACCOUNT</columns>
    <columns>CustomerEmail__c</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>SuppliedEmail__c</columns>
    <columns>Hub_Origin__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Open Cases</label>
</ListView>