unpackaged/main/default/objects/Case/listViews/AUS_ADMIN_Case.listView-meta.xml
<ListView>
    <fullName>AUS_ADMIN_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Contact_reason__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>TECH_MatchHub__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>AUS - ADMIN</label>
    <queue>AUS_ADMIN</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>