unpackaged/main/default/objects/Case/listViews/AUS_All.listView-meta.xml
<ListView>
    <fullName>AUS_All</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>SLAFlag__c</columns>
    <columns>Hub_Origin__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Language__c</columns>
    <columns>Channel__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>SuppliedEmail__c</columns>
    <columns>CASES.EMAIL</columns>
    <columns>Phone__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TECH_MatchHub__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>AUS - All</label>
    <sharedTo>
        <roleAndSubordinates>CS_Agent_AU</roleAndSubordinates>
    </sharedTo>
</ListView>