unpackaged/main/default/objects/Case/listViews/AUS_All_Customer_Care.listView-meta.xml
<ListView>
    <fullName>AUS_All_Customer_Care</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>SLAFlag__c</columns>
    <columns>Hub_Origin__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Language__c</columns>
    <columns>Channel__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>SuppliedEmail__c</columns>
    <columns>Phone__c</columns>
    <columns>Contact_reason__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>AUS Customer Care</label>
    <queue>AUS_Customer_Care</queue>
    <sharedTo>
        <roleAndSubordinates>CS_Agent_AU</roleAndSubordinates>
    </sharedTo>
</ListView>