unpackaged/main/default/objects/Case/listViews/AUS_All_VIC_Customer_Service.listView-meta.xml
<ListView>
    <fullName>AUS_All_VIC_Customer_Service</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>SLAFlag__c</columns>
    <columns>Client_cluster__c</columns>
    <columns>Hub_Origin__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Language__c</columns>
    <columns>Channel__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>SuppliedEmail__c</columns>
    <columns>Phone__c</columns>
    <columns>Contact_reason__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VICCase__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Activity__c</field>
        <operation>equals</operation>
        <value>CS</value>
    </filters>
    <filters>
        <field>HUB_Handle__c</field>
        <operation>equals</operation>
        <value>AUS</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>AUS - All - VIC - Customer Service</label>
    <sharedTo>
        <roleAndSubordinates>CS_AU</roleAndSubordinates>
    </sharedTo>
</ListView>